Buraya yaptığınız değişiklikleri açıklayan kısa bir mesaj yazın

--- a/env.example
+++ b/env.example
@@ -4,10 +4,14 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database Settings
-# SQLite (default)
-DATABASE_URL=sqlite:///db.sqlite3
+# MySQL for location data (Google Maps API → MySQL)
+MYSQL_DB_NAME=findus_locations
+MYSQL_DB_USER=root
+MYSQL_DB_PASSWORD=your-mysql-password
+MYSQL_DB_HOST=localhost
+MYSQL_DB_PORT=3306
 
-# MongoDB Settings
+# MongoDB Settings (for messaging - Firebase API → MongoDB)
 MONGODB_URL=mongodb://localhost:27017/
 MONGODB_DATABASE=kayip_esya_db
 
@@ -17,15 +21,16 @@ MILVUS_PORT=19530
 MILVUS_USER=
 MILVUS_PASSWORD=
 
-# Google Cloud Vision API
+# Google Cloud Vision API (for image matching → Milvus)
 GOOGLE_CLOUD_PROJECT_ID=your-project-id
 GOOGLE_APPLICATION_CREDENTIALS=path/to/service-account-key.json
 
-# Firebase Cloud Messaging
+# Firebase Cloud Messaging (for messaging/communication → MongoDB)
 FIREBASE_CREDENTIALS_PATH=path/to/firebase-service-account.json
 FIREBASE_DATABASE_URL=https://your-project.firebaseio.com
+FIREBASE_PROJECT_ID=your-firebase-project-id
 
-# Google Maps API
+# Google Maps API (for location data → MySQL)
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
 # Redis (for Celery)
