--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,11 @@ opencv-python>=4.8.0
 numpy>=1.24.0
 scikit-learn>=1.3.0
 
+# Deep Learning for Image Matching (CLIP)
+torch>=2.0.0
+torchvision>=0.15.0
+open-clip-torch>=2.20.0
+
 # Additional utilities
 celery>=5.3.0
 redis>=5.0.0
@@ -46,7 +51,11 @@ django-crispy-forms>=2.0
 crispy-bootstrap5>=0.7
 
 # Database drivers
-psycopg2-binary>=2.9.0
+# MySQL driver for location data (Google Maps API → MySQL)
+# Windows'ta PyMySQL kullanın, Linux'ta mysqlclient
+PyMySQL>=1.1.0  # Windows için önerilen
+# mysqlclient>=2.2.0  # Linux için alternatif (uncomment if on Linux)
+psycopg2-binary>=2.9.0  # PostgreSQL (optional)
 
 # Development tools
 django-debug-toolbar>=4.2.0
