--- a/env.example
+++ b/env.example
@@ -30,6 +30,13 @@ FIREBASE_CREDENTIALS_PATH=path/to/firebase-service-account.json
 FIREBASE_DATABASE_URL=https://your-project.firebaseio.com
 FIREBASE_PROJECT_ID=your-firebase-project-id
 
+# Firebase Frontend Config (for real-time messaging)
+FIREBASE_API_KEY=your-firebase-api-key
+FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
+FIREBASE_APP_ID=your-firebase-app-id
+
 # Google Maps API (for location data → MySQL)
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
